@@ -368,7 +368,7 @@ WITH_LIBELF_INCLUDE=
 WITH_LIBELF_LIB=
 WITH_LIBELF_ARCHIVE=
 	if test -d elfutils/libelf ; then
-	    AC_DEFINE(HAVE_LIBELF_GELF_H, 1, [Define to 1 if you have the <libelf/gelf.h> header file.])
+	    AC_DEFINE(HAVE_GELF_H, 1, [Define to 1 if you have the <gelf.h> header file.])
 	    AC_DEFINE(HAVE_LIBELF, 1, [Define to 1 if you have the `elf' library (-lelf).])
 	    WITH_LIBELF_SUBDIR=elfutils/libelf
 	    WITH_LIBELF_INCLUDE="-I\${top_srcdir}/${WITH_LIBELF_SUBDIR}"
@@ -379,6 +379,23 @@ AC_SUBST(WITH_LIBELF_SUBDIR)
 AC_SUBST(WITH_LIBELF_INCLUDE)
 AC_SUBST(WITH_LIBELF_LIB)
 AC_SUBST(WITH_LIBELF_ARCHIVE)
+
+WITH_LIBDWARF_SUBDIR=
+WITH_LIBDWARF_INCLUDE=
+WITH_LIBDWARF_LIB=
+WITH_LIBDWARF_ARCHIVE=
+	if test -d elfutils/libdwarf ; then
+	    AC_DEFINE(HAVE_DWARF_H, 1, [Define to 1 if you have the <dwarf.h> header file.])
+	    AC_DEFINE(HAVE_LIBDWARF, 1, [Define to 1 if you have the `dwarf' library (-ldwarf).])
+	    WITH_LIBDWARF_SUBDIR=elfutils/libdwarf
+	    WITH_LIBDWARF_INCLUDE="-I\${top_srcdir}/${WITH_LIBDWARF_SUBDIR}"
+	    WITH_LIBDWARF_LIB="\${top_builddir}/${WITH_LIBDWARF_SUBDIR}/libdwarf.la"
+	    WITH_LIBDWARF_ARCHIVE="\${top_builddir}/${WITH_LIBDWARF_SUBDIR}/.libs/libdwarf.a"
+	fi
+AC_SUBST(WITH_LIBDWARF_SUBDIR)
+AC_SUBST(WITH_LIBDWARF_INCLUDE)
+AC_SUBST(WITH_LIBDWARF_LIB)
+AC_SUBST(WITH_LIBDWARF_ARCHIVE)
 
 AC_CHECK_FUNC(setreuid, [], [
     AC_CHECK_LIB(ucb, setreuid, [if echo $LIBS | grep -- -lucb >/dev/null ;then :; else LIBS="$LIBS -lc -lucb" USEUCB=y;fi])
